# depot

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md
.github/workflows/: ci.yml
depot/: index.html  package-lock.json  package.json  playwright.config.ts
depot/playwright-report/: index.html
depot/tests/: e2e.spec.ts
src/: lib.rs  main.rs
tests/: main.rs
