[package]
name = "depot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/curiousmindflow/depot"
keywords = ["open source", "geolocalisation"]
categories = ["web"]

[dependencies]
axum = "0.8.8"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum-test = "18.7.0"
